Fixing jdk16